# passe-un-dessin

./: .env.example  .gitignore  .seed.json  Makefile  README.md  docker-compose.yml  renovate.json
backend/: .gitignore  Dockerfile  entrypoint.sh  manage.py  pyproject.toml  tox.ini
backend/core/: admin.py  apps.py  avatar_default_value.txt  constants.py  decorators.py  messages.py  models.py  routing.py  serializers.py  signals.py  storage.py  urls.py  word_list_de.csv  word_list_en.csv  word_list_en.txt  word_list_fr.csv  word_list_fr.txt
backend/core/management/commands/: add_to_blacklist.py  burns.txt  generate_suggestions.py  get_new_streams.py  import_language.py  merge_players.py  (+10 more)
backend/core/migrations/: 0002_user_email_as_username.py  0003_room.py  0004_player.py  0005_room_admin.py  0006_auto_20200328_1126.py  0007_auto_20200328_2202.py  0008_auto_20200328_2210.py  0009_auto_20200328_2229.py  0010_pad_sentence.py  0011_auto_20200401_2043.py  0012_game_pads_done.py  0013_auto_20200404_1721.py  0014_player_color.py  0015_game_round_duration.py  0016_vote.py  0017_auto_20200422_2048.py  0018_auto_20200427_2134.py  0019_game_draw_own_word.py  0019_room_friendly_name.py  0020_merge_20200508_2011.py  0021_auto_20200712_1538.py  0022_game_player_manytomany.py  0023_user_player.py  0024_auto_20200807_2046.py  0025_rebuild_player_game_participation.py  0026_fix_player_created_at.py  0027_fix_playergameparticipation_created_at.py  0028_add_avatar_to_player.py  0029_auto_20201101_1543.py  0029_auto_20201114_1846.py  0029_set_default_avatar.py  0030_blacklist_suggestion.py  0031_refactor_suggestions.py  0032_delete_suggestion.py  0032_player_total_score.py  0033_merge_20201129_1710.py  0033_player_total_score.py  0034_add_unaccent.py  0035_migrate_initial_steps.py  0036_auto_20210108_1155.py  (+8 more)
backend/core/serializers/: __init__.py  player.py  room.py
backend/core/service/: auth_service.py  facebook_client.py  game_service.py  mail_service.py  room_service.py  suggestions.py  suggestions_service.py
backend/core/tests/: test_models.py  test_storage.py
backend/core/views/: auth.py  game.py  general.py  room_management.py
backend/docker/: Dockerfile.prod  entrypoint.sh
backend/front/: views.py
backend/front/templates/: app.html
backend/infrastructure/: alb.yml  autoscaling.yml  build_docker.sh  build_infrastructure.sh  cloudfront.yml  deploy.sh  ecs-cluster.yml  ecs-repository.yml  ecs-service-api.yml  ecs-service-backend.yml  ecs-service-drawing-renderer.yml  ecs-service-pushpin.yml  ecs-services.yml  iam.yml  monitoring.yml  postgres.yml  s3.yml  security-groups.yml
backend/infrastructure/config-files/: fonts.conf  nginx.conf
backend/passe_un_dessin/: asgi.py  routing.py  sentry.py  urls.py  wsgi.py
backend/passe_un_dessin.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/passe_un_dessin/settings/: base.py  dev.py  prod.py
backend/passe_un_dessin/tests/: test_views.py
backend/suggestions/: admin.py  apps.py  models.py  service.py  views.py
backend/suggestions/migrations/: 0001_initial.py  0002_copy_suggestions.py  0003_add_german_language.py
backend/twitch/: apps.py  client.py  models.py  serializers.py  service.py  views.py
backend/twitch/migrations/: 0001_initial.py  0002_twitch_id_unique.py  0003_polling_stacktrace.py
(+571 files in other folders)
