[tool.poetry]
name = "passe_un_dessin"
version = "0.0.1"
description = "Online drawing game"
authors = ["Foucauld Degeorges <foucauld.degeorges@gmail.com>"]

[tool.poetry.dependencies]
python = "3.12.0"
argon2-cffi = "==23.1.0"
asgiref = "==3.8.1"
dj-database-url = "==2.3.0"
django = "==5.2"
django-memoize = "2.3.1"
djangorestframework = "==3.16.0"
djangorestframework_simplejwt = "==5.5.0"
psycopg2-binary = "==2.9.10"
requests = "==2.32.3"
sentry-sdk = "==2.8.0"
django-eventstream = "==5.3.2"
google-auth = "==2.30.0"
django-anymail = { extras = ["mailgun"], version = "==10.3" }
django-rest-passwordreset = "==1.5.0"
django-cors-headers = "==4.7.0"

[tool.poetry.group.dev.dependencies]
debugpy = "==1.8.13"
flake8 = "==7.2.0"
factory-boy = "==3.3.3"
coverage = "==7.5.4"
django-debug-toolbar = "==4.4.6"
django-extensions = "==3.2.3"
isort = "==5.13.2"
black = "24.10.0"
django-cprofile-middleware = "1.0.5"

[tool.black]
exclude = 'migrations'

[build-system]
requires = ["poetry==2.1.2"]
build-backend = "poetry.masonry.api"
