[tool.poetry]
name = "passe_un_dessin"
version = "0.0.1"
description = "Online drawing game"
authors = ["Foucauld Degeorges <foucauld.degeorges@gmail.com>"]

[tool.poetry.dependencies]
python = "3.12.0"
argon2-cffi = "==25.1.0"
asgiref = "==3.9.2"
dj-database-url = "==2.3.0"
django = "==5.2.7"
django-memoize = "2.3.1"
djangorestframework = "==3.16.1"
djangorestframework_simplejwt = "==5.5.1"
psycopg2-binary = "==2.9.10"
requests = "==2.32.5"
sentry-sdk = "==2.39.0"
django-eventstream = "==5.3.2"
google-auth = "==2.40.3"
django-anymail = { extras = ["mailgun"], version = "==13.1" }
django-rest-passwordreset = "==1.5.0"
django-cors-headers = "==4.9.0"
inflection = "0.5.1"

[tool.poetry.group.dev.dependencies]
debugpy = "==1.8.17"
flake8 = "==7.3.0"
factory-boy = "==3.3.3"
coverage = "==7.10.7"
django-debug-toolbar = "==5.2.0"
django-extensions = "==4.1"
isort = "==6.0.1"
black = "25.9.0"
django-cprofile-middleware = "1.0.5"

[tool.black]
exclude = 'migrations'

[build-system]
requires = ["poetry==2.1.4"]
build-backend = "poetry.masonry.api"
